import React from 'react';
import ModalWindow from '../../../../../app/assets/javascripts/react/components/presentational/shared/ModalWindow';
import * as factories from '../../../.factories';
import renderer from 'react-test-renderer';
import { shallow } from 'enzyme';

const setup = (args) => {

  const props = {
    visible: args.visible,
    root_component: args.element,
  };

  const component = renderer.create(
    <ModalWindow {...props} />
  );

  return { props, component };
};

describe('Snapshot', () => {
  it('should match the cached snapshot', () => {
    let { component } = setup({visible: true, element: React.createElement("H1", {}, "test")});
    let tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });
  it('should log an error when visible with no root_component', () => {
    global.console = jest.fn();
    global.console.error = jest.fn();
    let { component } = setup({visible: true, element: undefined });
    let tree = component.toJSON();
    expect(tree).toMatchSnapshot();
    expect(global.console.error.mock.calls.length).toEqual(1);
  });
});

